--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.11.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
@@ -24,6 +25,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "naive-ui": "^2.24.1",
     "prettier": "^2.2.1"
   }
 }
